Fix component breadcrumb path collapsing

--- a/server/sonar-web/src/main/less/components/navbar.less
+++ b/server/sonar-web/src/main/less/components/navbar.less
@@ -321,14 +321,9 @@
 
 .navbar-context-title-qualifier {
   display: inline-block;
-  vertical-align: top;
   line-height: 16px;
   padding-top: 5px;
   box-sizing: border-box;
-}
-
-.navbar-context-title-qualifier i {
-  vertical-align: top;
 }
 
 
